src/test/deca/context/valid/assign-float-int.deca
// Description : 
//	 test assign float <-- int
// Resultats :
//	
//
// Historique:
//    cree le 08/01/2022
{
	float f = 1;
}