src/test/deca/context/invalid/affect-int-float.deca
// Description : 
//	 test affectation int <-- float
// Resultats :
//	 8:5: Non compatible assignment of expression
{
	int i;
	float f;
	i = f;
}